com.github.lainsce.quilter (1.3.2) xenial; urgency=low

  * Ctrl-Z/Ctrl-Shift-Z now work properly.
  * All File I/O internal functions have been unified.

 -- Lains <lainsce@airmail.cc>  Sat, 30 September 2017 00:04:00 -0300

com.github.lainsce.quilter (1.3.1) xenial; urgency=low

  * Small fixes all around to make Quilter work better.
  * You can now do Markdown Tables.

 -- Lains <lainsce@airmail.cc>  Fri, 29 September 2017 03:27:00 -0300

com.github.lainsce.quilter (1.3.0) xenial; urgency=low

  * All-new Preview Mode that shows your file.

 -- Lains <lainsce@airmail.cc>  Thu, 28 September 2017 00:27:00 -0300

com.github.lainsce.quilter (1.2.9) xenial; urgency=low

  * Fix the bug that recreates old files when not needed.
  * New icon that matches the brand of Quilter more.

 -- Lains <lainsce@airmail.cc>  Fri, 8 September 2017 20:27:00 -0300

com.github.lainsce.quilter (1.2.8) xenial; urgency=low

  * Use colors that make sense for the app.
  * Make the toolbar stand out less for focus.
  * Minor fixes in the headerbar subtitle for files.

 -- Lains <lainsce@airmail.cc>  Fri, 8 September 2017 20:27:00 -0300

com.github.lainsce.quilter (1.2.7) xenial; urgency=low

  * Fix opening a file from outside the app.

 -- Lains <lainsce@airmail.cc>  Sun, 3 September 2017 15:37:00 -0300

com.github.lainsce.quilter (1.2.6) xenial; urgency=low

  * Add a toggle for the save button on new openings of the app.
  * Make Quilter behave like a One-Window App to disallow rogue instances.

 -- Lains <lainsce@airmail.cc>  Sun, 3 September 2017 00:37:00 -0300

com.github.lainsce.quilter (1.2.5) xenial; urgency=low

  * Remove unnecessary "Save before opening dialog".
  * Fix autosaving.

 -- Lains <lainsce@airmail.cc>  Wed, 9 August 2017 13:12:00 -0300

com.github.lainsce.quilter (1.2.4) xenial; urgency=low

  * Dark Mode is now truly a dark mode.
  * Organized the text view to be centered.
  * Follows the elementary Palette now.
  * Fixed the order of the mime-types in the dialogs.