@@ -68,6 +68,7 @@ executable(
         dependency('gtksourceview-3.0'),
         dependency('gtk+-3.0'),
         dependency('webkit2gtk-4.0'),
+        dependency('gtkspell3-3.0'),
         libmarkdown
     ],
     vala_args: [
