@@ -25,8 +25,10 @@ namespace Quilter {
         public bool focus_mode { get; set; }
         public bool use_system_font { get; set; }
         public bool show_save_button { get; set; }
+        public bool spellcheck { get; set; }
         public string font { get; set; }
         public string last_file { get; set; }
+        public string spellcheck_language { get; set; }
 
         private static AppSettings? instance;
         public static unowned AppSettings get_default () {
